Añadir nuevas páginas de contenido, estilo global y recursos gráficos para el sitio web.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import "../styles/style.css";
             <li class="dropdown">
               <a href="#" class="dropbtn">Aguas</a>
               <div class="dropdown-content">
-                <a href="/Grupo_AQUA/tda">Tratamientos de Agua</a>
+                <a href="/Grupo_AQUA/tratDeAguas">Tratamientos de Agua</a>
                 <a href="#">Consultoría</a>
                 <a href="#">Almacenamiento y Bombeo</a>
               </div>
@@ -79,7 +79,7 @@ import "../styles/style.css";
           </p>
         </div>
 
-        <a href="/nosotros" class="cta-button">Ver más</a>
+        <a href="/Grupo_AQUA/nosotros" class="cta-button">Ver más</a>
       </div>
     </section>
     <!-- CARRUSEL -->
