añadir las páginas iniciales «Inicio», «Quiénes somos» y «Tratamiento de aguas».

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,7 +233,7 @@ import "../styles/style.css";
       <div class="services-container">
         <h2>Nuestros Servicios</h2>
         <div class="services-grid">
-          <a href="/tda" class="service-card">
+          <a href="/Grupo_AQUA/tratDeAguas" class="service-card">
             <div class="icon">
               <i class="fa-solid fa-hand-holding-droplet"></i>
             </div>
