--- a/src/pages/tratDeAguas.astro
+++ b/src/pages/tratDeAguas.astro
@@ -26,7 +26,7 @@ import "../styles/style.css";
             <li class="dropdown">
               <a href="#">Aguas</a>
               <ul class="dropdown-content">
-                <li><a href="#">Tratamientos de Agua</a></li>
+                <li><a href="/Grupo_AQUA/tratDeAguas">Tratamientos de Agua</a></li>
                 <li><a href="#">Consultoría</a></li>
                 <li><a href="#">Almacenamiento y Bombeo</a></li>
               </ul>
@@ -64,7 +64,7 @@ import "../styles/style.css";
           <div class="t-card">
             <div class="t-image">
               <img
-                src="img-tratDeAguas/tratamiento-terciario-aguas-residuales.avif"
+                src="/Grupo_AQUA/img-tratDeAguas/tratamiento-terciario-aguas-residuales.avif"
                 alt="Agua Residual Doméstica"
               />
             </div>
@@ -82,7 +82,7 @@ import "../styles/style.css";
           <div class="t-card">
             <div class="t-image">
               <img
-                src="img-tratDeAguas/Industrial-Building.avif"
+                src="/Grupo_AQUA/img-tratDeAguas/Industrial-Building.avif"
                 alt="Agua Residual Industrial"
               />
             </div>
@@ -99,7 +99,7 @@ import "../styles/style.css";
 
           <div class="t-card">
             <div class="t-image">
-              <img src="img-tratDeAguas/agua-potable.avif" alt="Agua Potable" />
+              <img src="/Grupo_AQUA/img-tratDeAguas/agua-potable.avif" alt="Agua Potable" />
             </div>
             <div class="t-content">
               <h3>Agua Potable</h3>
@@ -113,7 +113,7 @@ import "../styles/style.css";
 
           <div class="t-card">
             <div class="t-image">
-              <img src="img-tratDeAguas/lluvia.avif" alt="Agua de Lluvia" />
+              <img src="/Grupo_AQUA/img-tratDeAguas/lluvia.avif" alt="Agua de Lluvia" />
             </div>
             <div class="t-content">
               <h3>Aprovechamiento de Agua de Lluvia</h3>
@@ -127,7 +127,7 @@ import "../styles/style.css";
 
           <div class="t-card">
             <div class="t-image">
-              <img src="img-tratDeAguas/reuso.avif" alt="Re-uso de agua" />
+              <img src="/Grupo_AQUA/img-tratDeAguas/reuso.avif" alt="Re-uso de agua" />
             </div>
             <div class="t-content">
               <h3>Re - uso</h3>
@@ -141,7 +141,7 @@ import "../styles/style.css";
 
           <div class="t-card">
             <div class="t-image">
-              <img src="img-tratDeAguas/Water-Drops.avif" alt="Unidad de Saneamiento" />
+              <img src="/Grupo_AQUA/img-tratDeAguas/Water-Drops.avif" alt="Unidad de Saneamiento" />
             </div>
             <div class="t-content">
               <h3>Unidad de Saneamiento Básico</h3>
@@ -185,7 +185,7 @@ import "../styles/style.css";
           </div>
           <div class="footer-logo-section">
             <div class="footer-logo">
-              <img src="img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+              <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
             </div>
           </div>
         </div>
