Añadir las páginas iniciales del sitio web para inicio, acuicultura, quiénes somos y tratamiento de aguas, con los estilos y recursos correspondientes.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import "../styles/style.css";
               </div>
             </li>
             <li class="dropdown">
-              <a href="/Grupo_AQUA/acu" class="dropbtn">Acuicultura</a>
+              <a href="/Grupo_AQUA/acuicult" class="dropbtn">Acuicultura</a>
               <div class="dropdown-content">
                 <a href="#">Circuladores</a>
                 <a href="#">Aireadores</a>
@@ -239,7 +239,7 @@ import "../styles/style.css";
             </div>
             <h3>Tratamiento de Aguas</h3>
           </a>
-          <a href="/acu" class="service-card">
+          <a href="/Grupo_AQUA/acuicult" class="service-card">
             <div class="icon">
               <i class="fa-solid fa-fish-fins"></i>
             </div>
