--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -32,7 +32,7 @@ import "../styles/style.css";
               </ul>
             </li>
             <li class="dropdown">
-              <a href="/acu">Acuicultura</a>
+              <a href="/Grupo_AQUA/acuicult">Acuicultura</a>
               <ul class="dropdown-content">
                 <li><a href="#">Circuladores</a></li>
                 <li><a href="#">Aireadores</a></li>
