--- a/src/pages/tratDeAguas.astro
+++ b/src/pages/tratDeAguas.astro
@@ -18,7 +18,7 @@ import "../styles/style.css";
     <header>
       <div class="header-container">
         <div class="logo">
-          <img src="img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+          <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
         </div>
         <nav>
           <ul>
@@ -32,7 +32,7 @@ import "../styles/style.css";
               </ul>
             </li>
             <li class="dropdown">
-              <a href="/acu">Acuicultura</a>
+              <a href="/Grupo_AQUA/acuicult">Acuicultura</a>
               <ul class="dropdown-content">
                 <li><a href="#">Circuladores</a></li>
                 <li><a href="#">Aireadores</a></li>
@@ -40,7 +40,7 @@ import "../styles/style.css";
             </li>
             <li><a href="https://5micras.com/">Filtros</a></li>
             <li><a href="/stp">Soporte</a></li>
-            <li><a href="/nosotros">Nosotros</a></li>
+            <li><a href="/Grupo_AQUA/nosotros">Nosotros</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Proyectos</a></li>
           </ul>
