--- a/src/pages/acuicult.astro
+++ b/src/pages/acuicult.astro
@@ -18,7 +18,7 @@ import "../styles/style.css";
     <header>
       <div class="header-container">
         <div class="logo">
-          <img src="img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+          <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
         </div>
         <nav>
           <ul>
