añadir páginas con contenido básico inicial para la página de inicio, acuicultura, tratamiento de aguas, quiénes somos y asistencia técnica, junto con un estilo global.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import "../styles/style.css";
               </div>
             </li>
             <li><a href="https://5micras.com/">Filtros</a></li>
-            <li><a href="/Grupo_AQUA/stp">Soporte</a></li>
+            <li><a href="/Grupo_AQUA/soporteTec">Soporte</a></li>
             <li><a href="/Grupo_AQUA/nosotros">Nosotros</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Proyectos</a></li>
@@ -251,7 +251,7 @@ import "../styles/style.css";
             </div>
             <h3>Filtros</h3>
           </a>
-          <a href="/stp" class="service-card">
+          <a href="/Grupo_AQUA/soporteTec" class="service-card">
             <div class="icon">
               <i class="fa-solid fa-gears"></i>
             </div>
