--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -39,7 +39,7 @@ import "../styles/style.css";
               </ul>
             </li>
             <li><a href="https://5micras.com/">Filtros</a></li>
-            <li><a href="/stp">Soporte</a></li>
+            <li><a href="/Grupo_AQUA/soporteTec">Soporte</a></li>
             <li><a href="/Grupo_AQUA/nosotros">Nosotros</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Proyectos</a></li>
