Elemine el footer de la pagina soporte tecnico

--- a/src/pages/soporteTec.astro
+++ b/src/pages/soporteTec.astro
@@ -7,7 +7,7 @@ import "../styles/style.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acuicultura | grupoaqua</title>
+    <title>Soporte | grupoaqua</title>
     <link rel="icon" type="image/avif" href="/Grupo_AQUA/img/Fabicon.avif" />
     <link
       rel="stylesheet"
@@ -110,7 +110,7 @@ import "../styles/style.css";
     </section>
 
     <!-- Footer Section -->
-    <footer>
+    <!-- <footer>
       <div class="footer-bg-overlay"></div>
       <div class="footer-container">
         <div class="footer-content">
@@ -151,6 +151,6 @@ import "../styles/style.css";
           </p>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
