Agregue el footer del contacto en la pagina Soporte Técnico

--- a/src/pages/soporteTec.astro
+++ b/src/pages/soporteTec.astro
@@ -110,7 +110,7 @@ import "../styles/style.css";
     </section>
 
     <!-- Footer Section -->
-    <!-- <footer>
+    <footer>
       <div class="footer-bg-overlay"></div>
       <div class="footer-container">
         <div class="footer-content">
@@ -151,6 +151,6 @@ import "../styles/style.css";
           </p>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
